--- a/jupitio notbook olympics.ipynb
+++ b/jupitio notbook olympics.ipynb
@@ -14,6 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hi i am tring git hub"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
